--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@ Please follow these rules meticulously:
 9.  **IDs**: Ensure \`id\` fields are unique and sequential (stage-1, task-1-1, task-1-2, stage-2, task-2-1...).
 10. **Output**: Provide *only* the raw JSON object, starting with \`{\` and ending with \`}\`. Do not include \`\`\`json\`\`\` markers.
 
-Now, please analyse and convert the following SOP text in JSON format code box:
+Now, please analyse and convert the following SOP text in json format code:
 
 ---
 SOP TEXT STARTS HERE
